@@ -13,10 +13,12 @@ if($data->privacy && $data->privacy->show_online_status)
 	printf($template, Yum::t('First visit'), date(UserModule::$dateFormat, $data->createtime)); 
 	printf($template, Yum::t('Last visit'), date(UserModule::$dateFormat, $data->lastvisit)); 
 
+	if(Yum::hasModule('messages'))
 	echo CHtml::link(Yum::t('Write a message'), array(
-			'//user/messages/compose', 'to_user_id' => $data->id)) . '<br />';
-echo CHtml::link(Yum::t('Visit profile'), array(
-			'//user/profile/view', 'id' => $data->id));
+				'//messages/messages/compose', 'to_user_id' => $data->id)) . '<br />';
+
+	echo CHtml::link(Yum::t('Visit profile'), array(
+				'//user/profile/view', 'id' => $data->id));
 
 
 
